[tool.ruff]
# hard limit, error here
line-length = 120

[tool.black]
# soft limit, wrap just before 100 chars
line-length = 98

[tool.poetry]
name = "llm-engineer-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"
langchain = "^0.0.316"
openai = "^0.28.1"
megamock = "^0.1.0b7"
arrow = "^1.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
ruff = "^0.1.0"
black = "^23.10.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
